# simple_scraping

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  runserver.py
scripts/: build-docker.sh
src/: api.py  raw.py  save.py
