[tool.poetry]
name = "scrape-jobs"
version = "0.1.0"
description = ""
authors = ["Patrick Mwangi <patrickmwangi554@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
requests = "^2.32.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
